Fixed footer to have an responsive design
When the page is zoomed the footer will overlap everything
no need of change in this section

--- a/iLearn/css/style.css
+++ b/iLearn/css/style.css
@@ -11,9 +11,3 @@ input, button, div {
 #choose-profile-type {
   font-weight: bold;
 }
-.footer {
-  position:fixed;
-   left:0px;
-   bottom:0px;
-   width:100%;
-}
